fix hover/active state on mobile

--- a/api/static/style.css
+++ b/api/static/style.css
@@ -38,7 +38,7 @@ h1 {
         color: grey;
     }
 
-    &:hover {
+    &:active {
         scale: 1.1;
         box-shadow: 0 0 0.5rem 0.5rem rgba(0, 0, 0, 0.5);
     }
@@ -48,5 +48,12 @@ h1 {
     body {
         width: 50vw;
         margin: 0 auto;
+    }
+
+    .class-list > div {
+        &:hover {
+            scale: 1.1;
+            box-shadow: 0 0 0.5rem 0.5rem rgba(0, 0, 0, 0.5);
+        }
     }
 }
